--- a/Cargo.toml
+++ b/Cargo.toml
@@ -244,6 +244,7 @@ geos = { version = "8.3", features = ["static", "geo", "geo-types"] }
 geozero = { version = "0.13.0", features = ["default", "with-wkb", "with-geos", "with-geojson"] }
 hashbrown = { version = "0.14.3", default-features = false }
 http = "1"
+hyper = "0.14.20"
 itertools = "0.10.5"
 jsonb = "0.4.1"
 jwt-simple = "0.11.0"
