--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -32,6 +32,10 @@ percent-encoding = "2.3"
 sled = "0.34"
 rustyline = "12.0"
 serde = { version = "1.0", features = ["derive"] }
+sqlformat = "0.2"
+strum = "0.25"
+strum_macros = "0.25"
+serde_json = "1.0"
 terminal_size = "0.3"
 tokio = { version = "1.34", features = [
     "macros",
@@ -39,11 +43,19 @@ tokio = { version = "1.34", features = [
     "rt-multi-thread",
     "sync",
     "parking_lot",
+    "full"
 ] }
 toml = "0.8"
 tracing-appender = "0.2"
 unicode-segmentation = "1.10"
 url = { version = "2.5", default-features = false }
+actix-web = "4.0"
+actix-rt = "2.6"
+webbrowser = "1.0.1"
+actix-files = "0.6"
+env_logger = "0.11.3"
+cookie = "0.18.1"
+futures = "0.3.30"
 
 [build-dependencies]
 vergen = { version = "8.2", features = ["build", "git", "gix"] }
