--- a/src/common/exception/Cargo.toml
+++ b/src/common/exception/Cargo.toml
@@ -31,6 +31,7 @@ serde_json = { workspace = true }
 tantivy = { workspace = true }
 thiserror = { workspace = true }
 tonic = { workspace = true }
+tokio = "1.39.2"
 
 [package.metadata.cargo-machete]
 ignored = ["geos"]
