--- a/src/query/storages/fuse/Cargo.toml
+++ b/src/query/storages/fuse/Cargo.toml
@@ -39,6 +39,7 @@ databend-common-pipeline-transforms = { workspace = true }
 databend-common-sharing = { workspace = true }
 databend-common-sql = { workspace = true }
 databend-common-storage = { workspace = true }
+databend-common-users = { workspace = true }
 databend-enterprise-fail-safe = { workspace = true }
 databend-storages-common-blocks = { workspace = true }
 databend-storages-common-cache = { workspace = true }
