--- a/Cargo.toml
+++ b/Cargo.toml
@@ -408,3 +408,4 @@ orc-rust = { git = "https://github.com/youngsofun/datafusion-orc", rev = "174537
 recursive = { git = "https://github.com/zhang2014/recursive.git", rev = "6af35a1" }
 sled = { git = "https://github.com/datafuse-extras/sled", tag = "v0.34.7-datafuse.1" }
 xorfilter-rs = { git = "https://github.com/datafuse-extras/xorfilter", tag = "databend-alpha.4" }
+borsh = { git = "https://github.com/dqhl76/borsh-rs.git", rev = "6609a44"}
