feat: batch size hint of stream consumption

--- a/src/query/storages/stream/Cargo.toml
+++ b/src/query/storages/stream/Cargo.toml
@@ -24,6 +24,7 @@ databend-common-sql = { workspace = true }
 databend-common-storages-fuse = { workspace = true }
 databend-storages-common-table-meta = { workspace = true }
 fastrace = { workspace = true }
+futures = { workspace = true }
 
 [build-dependencies]
 
