--- a/src/query/sql/Cargo.toml
+++ b/src/query/sql/Cargo.toml
@@ -73,6 +73,7 @@ serde = { workspace = true }
 sha2 = { workspace = true }
 simsearch = "0.2"
 time = "0.3.14"
+tokio = "1.39.2"
 url = "2.3.1"
 
 [lints]
