--- a/src/query/service/Cargo.toml
+++ b/src/query/service/Cargo.toml
@@ -42,6 +42,7 @@ async-recursion = "1.1.1"
 async-stream = "0.3.3"
 async-trait = { workspace = true }
 backoff = { version = "0.4.0", features = ["futures", "tokio"] }
+backon = "0.4"
 base64 = "0.21.0"
 bumpalo = { workspace = true }
 byte-unit = "4.0.19"
