--- a/tests/sqllogictests/Cargo.toml
+++ b/tests/sqllogictests/Cargo.toml
@@ -19,6 +19,7 @@ clap = { workspace = true }
 databend-common-exception = { workspace = true }
 env_logger = "0.10.0"
 futures-util = { workspace = true }
+mini-redis = "0.4"
 mysql_async = { workspace = true }
 rand = { workspace = true }
 regex = { workspace = true }
