--- a/tests/sqllogictests/Cargo.toml
+++ b/tests/sqllogictests/Cargo.toml
@@ -16,6 +16,7 @@ name = "databend-sqllogictests"
 [dependencies]
 async-trait = { workspace = true }
 clap = { workspace = true }
+databend-common-base = { workspace = true }
 databend-common-exception = { workspace = true }
 env_logger = "0.10.0"
 futures-util = { workspace = true }
