--- a/src/query/storages/iceberg/Cargo.toml
+++ b/src/query/storages/iceberg/Cargo.toml
@@ -34,6 +34,7 @@ parquet = { workspace = true }
 serde = { workspace = true }
 tokio = { workspace = true }
 typetag = { workspace = true }
+ordered-float = { workspace = true }
 
 [lints]
 workspace = true
