--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -23,6 +23,7 @@ memory-profiling = [
 [dependencies]
 async-backtrace = { workspace = true }
 async-trait = { workspace = true }
+borsh = { workspace = true }
 bytesize = "1.1.0"
 chrono = { workspace = true }
 ctrlc = { version = "3.2.3", features = ["termination"] }
@@ -33,6 +34,8 @@ futures = { workspace = true }
 libc = "0.2.153"
 log = { workspace = true }
 logcall = { workspace = true }
+micromarshal = "0.5.0"
+num-traits = "0.2.19"
 num_cpus = "1.13.1"
 once_cell = { workspace = true }
 parking_lot = { workspace = true }
@@ -44,20 +47,18 @@ pprof = { version = "0.11.1", features = [
 ] }
 prometheus-client = { workspace = true }
 prometheus-parse = "0.2.3"
+rand = { workspace = true, features = ["serde1"] }
 regex = { workspace = true }
 replace_with = "0.1.7"
 semver = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 state = "0.5"
 tikv-jemalloc-ctl = { workspace = true }
 tikv-jemalloc-sys = "0.5.2"
 tokio = { workspace = true }
 unicode-segmentation = "1.10.1"
 uuid = { workspace = true }
-num-traits = "0.2.19"
-borsh = { workspace = true }
-rand = { workspace = true, features = ["serde1"]}
-micromarshal = "0.5.0"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 procfs = { version = "^0.16" }
