--- a/src/query/users/Cargo.toml
+++ b/src/query/users/Cargo.toml
@@ -38,6 +38,7 @@ passwords = { version = "3.1.16", features = ["common-password"] }
 reqwest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+itertools = "0.13.0"
 
 [dev-dependencies]
 databend-common-expression = { workspace = true }
