--- a/src/query/users/Cargo.toml
+++ b/src/query/users/Cargo.toml
@@ -30,6 +30,7 @@ databend-common-meta-kvapi = { workspace = true }
 databend-common-meta-store = { workspace = true }
 databend-common-meta-types = { workspace = true }
 enumflags2 = { workspace = true }
+itertools = "0.13.0"
 jwt-simple = "0.11"
 log = { workspace = true }
 p256 = "0.13"
