fix: add custom (de)serialization methods for special float value (#16258)
* fix: add custom (de)serialization for infinite float values

* fix: fix serialize and deserialize error for infinity float case

* test: add more tests for inf and nan

* fix

* fix: add borsh f32 and f64 replaced method for nan

* chore: patch borsh-rs to bypass NaN check

* make taplo happy

* refactor: put ordered float file in base

* fix: override ordered_float's json and borsh (de)serde methods to allow use NaN and inf

* taplo fmt

* test: add more test

--- a/src/query/storages/iceberg/Cargo.toml
+++ b/src/query/storages/iceberg/Cargo.toml
@@ -30,6 +30,7 @@ iceberg = { workspace = true }
 iceberg-catalog-hms = { workspace = true }
 iceberg-catalog-rest = { workspace = true }
 match-template = { workspace = true }
+ordered-float = { workspace = true }
 parquet = { workspace = true }
 serde = { workspace = true }
 tokio = { workspace = true }
