--- a/src/query/formats/Cargo.toml
+++ b/src/query/formats/Cargo.toml
@@ -17,6 +17,7 @@ base64 = "0.21.0"
 bstr = "1.0.1"
 chrono-tz = { workspace = true }
 databend-common-arrow = { workspace = true }
+databend-common-base = { workspace = true }
 databend-common-exception = { workspace = true }
 databend-common-expression = { workspace = true }
 databend-common-io = { workspace = true }
@@ -33,7 +34,6 @@ match-template = { workspace = true }
 micromarshal = "0.7.0"
 num = "0.4.0"
 num-traits = "0.2.15"
-ordered-float = { workspace = true }
 roaring = { version = "0.10.1", features = ["serde"] }
 serde_json = { workspace = true }
 
