--- a/Cargo.toml
+++ b/Cargo.toml
@@ -270,6 +270,7 @@ opendal = { version = "0.49.0", features = [
     "services-webhdfs",
     "services-huggingface",
     "services-redis",
+    "services-mysql",
 ] }
 openraft = { git = "https://github.com/drmingdrmer/openraft", tag = "v0.10.0-alpha.6", features = [
     "serde",
