--- a/src/query/service/Cargo.toml
+++ b/src/query/service/Cargo.toml
@@ -139,7 +139,7 @@ naive-cityhash = "0.2.0"
 num_cpus = "1.16.0"
 once_cell = { workspace = true }
 opendal = { workspace = true }
-opensrv-mysql = { version = "0.7.0", features = ["tls"] }
+opensrv-mysql = "0.7.0"
 opentelemetry = { workspace = true }
 opentelemetry_sdk = { workspace = true }
 parking_lot = { workspace = true }
