--- a/src/query/pipeline/transforms/Cargo.toml
+++ b/src/query/pipeline/transforms/Cargo.toml
@@ -18,6 +18,7 @@ databend-common-exception = { workspace = true }
 databend-common-expression = { workspace = true }
 databend-common-pipeline-core = { workspace = true }
 jsonb = { workspace = true }
+libc = "0.2.158"
 log = { workspace = true }
 match-template = { workspace = true }
 serde = { workspace = true }
