--- a/src/common/exception/Cargo.toml
+++ b/src/common/exception/Cargo.toml
@@ -28,6 +28,7 @@ prost = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+sqlx = "0.8"
 tantivy = { workspace = true }
 thiserror = { workspace = true }
 tonic = { workspace = true }
