chore: use logforth to replace fern

--- a/src/common/tracing/Cargo.toml
+++ b/src/common/tracing/Cargo.toml
@@ -19,18 +19,16 @@ databend-common-exception = { workspace = true }
 defer = "0.2"
 fastrace = { workspace = true }
 fastrace-opentelemetry = { workspace = true }
-fern = "0.6.2"
 itertools = { workspace = true }
 libc = "0.2.153"
 log = { workspace = true }
+logforth = "0.11.2"
 opentelemetry = { workspace = true }
 opentelemetry-otlp = { workspace = true }
 opentelemetry_sdk = { workspace = true }
 serde = { workspace = true }
-serde_json = { workspace = true }
 strip-ansi-escapes = "0.2"
 tonic = { workspace = true }
-tracing-appender = { workspace = true }
 
 [dev-dependencies]
 
