--- a/Cargo.toml
+++ b/Cargo.toml
@@ -247,6 +247,7 @@ http = "1"
 itertools = "0.10.5"
 jsonb = "0.4.1"
 jwt-simple = "0.11.0"
+libc = { version = "0.2.158" }
 match-template = "0.0.1"
 mysql_async = { version = "0.34", default-features = false, features = ["native-tls-tls"] }
 object_store_opendal = "0.46"
