--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -31,7 +31,7 @@ databend-common-exception = { workspace = true }
 enquote = "1.1.0"
 fastrace = { workspace = true }
 futures = { workspace = true }
-libc = "0.2.153"
+libc = { workspace = true }
 log = { workspace = true }
 logcall = { workspace = true }
 micromarshal = "0.5.0"
