--- a/src/query/service/Cargo.toml
+++ b/src/query/service/Cargo.toml
@@ -163,6 +163,7 @@ serde_stacker = { workspace = true }
 serde_urlencoded = "0.7.1"
 sha2 = { workspace = true }
 socket2 = "0.5.3"
+sqlx = { version = "0.8", features = ["mysql", "runtime-tokio"] }
 strength_reduce = "0.2.4"
 sysinfo = "0.30"
 tempfile = "3.4.0"
