--- a/src/query/storages/fuse/Cargo.toml
+++ b/src/query/storages/fuse/Cargo.toml
@@ -14,6 +14,7 @@ test = true
 ahash = "0.8.3"
 arrow = { workspace = true }
 arrow-array = { workspace = true }
+arrow-ipc = { workspace = true }
 async-backtrace = { workspace = true }
 async-channel = "1.7.1"
 async-trait = { workspace = true }
