--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -50,6 +50,7 @@ prometheus-parse = "0.2.3"
 rand = { workspace = true, features = ["serde1"] }
 regex = { workspace = true }
 replace_with = "0.1.7"
+rustix = "0.38.37"
 semver = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
