--- a/src/query/storages/fuse/Cargo.toml
+++ b/src/query/storages/fuse/Cargo.toml
@@ -14,6 +14,7 @@ test = true
 ahash = "0.8.3"
 arrow = { workspace = true }
 arrow-array = { workspace = true }
+arrow-ipc = { workspace = true }
 async-backtrace = { workspace = true }
 async-channel = "1.7.1"
 async-trait = { workspace = true }
@@ -64,7 +65,8 @@ sha2 = { workspace = true }
 siphasher = "0.3.10"
 sys-info = "0.9"
 tantivy = { workspace = true }
-tantivy-jieba = "0.11.0"
+tantivy-fst = "0.5"
+tantivy-jieba = { git = "https://github.com/b41sh/tantivy-jieba", rev = "af84361" }
 thrift = "0.17.0"
 typetag = { workspace = true }
 uuid = { workspace = true }
