--- a/src/query/storages/common/index/Cargo.toml
+++ b/src/query/storages/common/index/Cargo.toml
@@ -16,7 +16,6 @@ ignored = ["xorfilter-rs", "match-template"]
 [dependencies]
 anyerror = { workspace = true }
 cbordata = { version = "0.6.0" }
-crc32fast = "1.3.2"
 databend-common-arrow = { workspace = true }
 databend-common-ast = { workspace = true }
 databend-common-exception = { workspace = true }
@@ -29,6 +28,7 @@ levenshtein_automata = "0.2.1"
 log = { workspace = true }
 match-template = { workspace = true }
 parquet = { workspace = true }
+roaring = "0.10.1"
 serde = { workspace = true }
 serde_json = { workspace = true }
 tantivy = { workspace = true }
