add columnar segment info

--- a/src/query/storages/common/table_meta/Cargo.toml
+++ b/src/query/storages/common/table_meta/Cargo.toml
@@ -10,6 +10,7 @@ edition = { workspace = true }
 dev = ["snap"]
 
 [dependencies]
+arrow = { workspace = true }
 bincode = "1.3.3"
 chrono = { workspace = true }
 databend-common-arrow = { workspace = true }
