--- a/src/query/storages/fuse/Cargo.toml
+++ b/src/query/storages/fuse/Cargo.toml
@@ -66,7 +66,7 @@ siphasher = "0.3.10"
 sys-info = "0.9"
 tantivy = { workspace = true }
 tantivy-fst = "0.5"
-tantivy-jieba = { git = "https://github.com/b41sh/tantivy-jieba", rev = "af84361" }
+tantivy-jieba = { workspace = true }
 thrift = "0.17.0"
 typetag = { workspace = true }
 uuid = { workspace = true }
