--- a/src/common/io/Cargo.toml
+++ b/src/common/io/Cargo.toml
@@ -18,6 +18,7 @@ chrono = { workspace = true }
 chrono-tz = { workspace = true }
 databend-common-base = { workspace = true }
 databend-common-exception = { workspace = true }
+enquote = "1.1.0"
 enumflags2 = { workspace = true }
 ethnum = { workspace = true }
 geo = { workspace = true }
