refactor(storage): inverted index use merge io to read data

--- a/src/query/storages/common/io/Cargo.toml
+++ b/src/query/storages/common/io/Cargo.toml
@@ -8,10 +8,14 @@ edition = { workspace = true }
 
 [dependencies]
 async-backtrace = { workspace = true }
+bytes = { workspace = true }
 databend-common-base = { workspace = true }
 databend-common-catalog = { workspace = true }
 databend-common-exception = { workspace = true }
+databend-common-expression = { workspace = true }
+databend-common-metrics = { workspace = true }
 fastrace = { workspace = true }
+futures = { workspace = true }
 log = { workspace = true }
 opendal = { workspace = true }
 
