refactor: Automatically chunk large key sets in KVPbApi methods
- Modify KVPbApi::get_pb_vec() and KVPbApi::get_pb_values_vec()
  to automatically split large key sets into chunks of 256 keys

- Simplifies caller logic by eliminating the need for manual key set splitting

--- a/src/meta/api/Cargo.toml
+++ b/src/meta/api/Cargo.toml
@@ -27,6 +27,7 @@ databend-common-meta-types = { workspace = true }
 databend-common-proto-conv = { workspace = true }
 fastrace = { workspace = true }
 futures = { workspace = true }
+itertools = { workspace = true }
 log = { workspace = true }
 logcall = { workspace = true }
 maplit = "1.0.2"
