feat(query): window partition by spill to disk (#16441)
* dma write

Signed-off-by: coldWater <forsaken628@gmail.com>

* partition spill to disk

Signed-off-by: coldWater <forsaken628@gmail.com>

* fix

Signed-off-by: coldWater <forsaken628@gmail.com>

* refine

Signed-off-by: coldWater <forsaken628@gmail.com>

* temp file

Signed-off-by: coldWater <forsaken628@gmail.com>

* refactor spill

Signed-off-by: coldWater <forsaken628@gmail.com>

* clear temp dir

Signed-off-by: coldWater <forsaken628@gmail.com>

* move dma

Signed-off-by: coldWater <forsaken628@gmail.com>

* config

Signed-off-by: coldWater <forsaken628@gmail.com>

* fix

Signed-off-by: coldWater <forsaken628@gmail.com>

* bytes limit

Signed-off-by: coldWater <forsaken628@gmail.com>

* rustix

Signed-off-by: coldWater <forsaken628@gmail.com>

* rustix

Signed-off-by: coldWater <forsaken628@gmail.com>

* temp

Signed-off-by: coldWater <forsaken628@gmail.com>

* Location

Signed-off-by: coldWater <forsaken628@gmail.com>

* builder

Signed-off-by: coldWater <forsaken628@gmail.com>

* fix

Signed-off-by: coldWater <forsaken628@gmail.com>

* SpillerConfig

Signed-off-by: coldWater <forsaken628@gmail.com>

* temp dir

Signed-off-by: coldWater <forsaken628@gmail.com>

* fix

Signed-off-by: coldWater <forsaken628@gmail.com>

* drop_disk_spill_dir_unknown

Signed-off-by: coldWater <forsaken628@gmail.com>

* drop residual temp dir

Signed-off-by: coldWater <forsaken628@gmail.com>

* no copy read

Signed-off-by: coldWater <forsaken628@gmail.com>

* rename reserved_disk_ratio

Signed-off-by: coldWater <forsaken628@gmail.com>

* record the profile of LocalSpill and RemoteSpill separately

Signed-off-by: coldWater <forsaken628@gmail.com>

* defalut disable

Signed-off-by: coldWater <forsaken628@gmail.com>

* update setting

Signed-off-by: coldWater <forsaken628@gmail.com>

* fix

Signed-off-by: coldWater <forsaken628@gmail.com>

* fix dma

Signed-off-by: coldWater <forsaken628@gmail.com>

* fix

Signed-off-by: coldWat

--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -31,7 +31,7 @@ databend-common-exception = { workspace = true }
 enquote = "1.1.0"
 fastrace = { workspace = true }
 futures = { workspace = true }
-libc = "0.2.153"
+libc = { workspace = true }
 log = { workspace = true }
 logcall = { workspace = true }
 micromarshal = "0.5.0"
@@ -50,6 +50,7 @@ prometheus-parse = "0.2.3"
 rand = { workspace = true, features = ["serde1"] }
 regex = { workspace = true }
 replace_with = "0.1.7"
+rustix = "0.38.37"
 semver = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
