--- a/Cargo.toml
+++ b/Cargo.toml
@@ -282,10 +282,9 @@ parking_lot = "0.12.1"
 parquet = { version = "52", features = ["async"] }
 paste = "1.0.15"
 sha2 = "0.10.8"
-# TODO: let's use native tls instead.
-iceberg = { version = "0.3.0" }
-iceberg-catalog-hms = { version = "0.3.0" }
-iceberg-catalog-rest = { version = "0.3.0" }
+iceberg = { version = "0.3.0", git = "https://github.com/apache/iceberg-rust/", rev = "c3549836796f93aa3ad22276af788aa3d92533a1" }
+iceberg-catalog-hms = { version = "0.3.0", git = "https://github.com/apache/iceberg-rust/", rev = "c3549836796f93aa3ad22276af788aa3d92533a1" }
+iceberg-catalog-rest = { version = "0.3.0", git = "https://github.com/apache/iceberg-rust/", rev = "c3549836796f93aa3ad22276af788aa3d92533a1" }
 poem = { version = "3.0", features = ["openssl-tls", "multipart", "compression"] }
 proj4rs = { version = "0.1.3", features = ["geo-types", "crs-definitions"] }
 prometheus-client = "0.22"
