fix(query): comment --compress-debug-sections=zlib

--- a/.github/actions/build_linux_sanitizer/action.yml
+++ b/.github/actions/build_linux_sanitizer/action.yml
@@ -41,8 +41,10 @@ runs:
             flags=""
             ;;
         esac
-        echo "RUSTFLAGS=${flags}" >> $GITHUB_ENV
-#        echo "RUSTFLAGS=${flags} -C link-arg=-Wl,--compress-debug-sections=zlib" >> $GITHUB_ENV
+        if [[ ! -z "${flags}" ]]; then
+          echo "RUSTFLAGS=${flags}" >> $GITHUB_ENV
+#          echo "RUSTFLAGS=${flags} -C link-arg=-Wl,--compress-debug-sections=zlib" >> $GITHUB_ENV
+        fi
         target=${{ inputs.target }}
         echo "BUILD_ARCH=${target/-unknown-linux-*}" >> $GITHUB_ENV
 
