fix(query): fix cannot obtain stack trace when segmentation fault (#16566)
* fix(query): fix cannot obtain stack trace when segmentation fault

* fix(query): fix cannot obtain stack trace when segmentation fault

* Revert "chore(query): add more asserts (#16536)"

This reverts commit c6bd10b9563e937a1bd2694822a0e825d9d2079e.

* fix(query): forward the stack to another thread for symbol parsing

* fix(query): forward the stack to another thread for symbol parsing

* fix(query): forward the stack to another thread for symbol parsing

* fix(query): comment --compress-debug-sections=zlib

* fix(query): comment --compress-debug-sections=zlib

* fix(query): comment --compress-debug-sections=zlib

* Revert "Revert "chore(query): add more asserts (#16536)""

This reverts commit e7ce5fe349216e5d5f01f4b569f62b54894d5c7a.

* fix(query): fix cannot obtain stack trace when segmentation fault

--- a/src/common/tracing/Cargo.toml
+++ b/src/common/tracing/Cargo.toml
@@ -12,9 +12,9 @@ test = true
 
 [dependencies]
 anyhow = { workspace = true }
-backtrace = { workspace = true }
+backtrace = { workspace = true, features = ["std", "serialize-serde"] }
+bincode = { workspace = true }
 chrono = { workspace = true }
-color-backtrace = { version = "0.6" }
 databend-common-base = { workspace = true }
 databend-common-exception = { workspace = true }
 defer = "0.2"
@@ -34,7 +34,6 @@ opentelemetry-otlp = { workspace = true }
 opentelemetry_sdk = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-strip-ansi-escapes = "0.2"
 tonic = { workspace = true }
 
 [dev-dependencies]
