--- a/tests/sqllogictests/scripts/docker-compose-iceberg-tpch.yml
+++ b/tests/sqllogictests/scripts/docker-compose-iceberg-tpch.yml
@@ -15,6 +15,8 @@
 # specific language governing permissions and limitations
 # under the License.
 
+version: '3.8'
+
 services:
   rest:
     image: tabulario/iceberg-rest:0.10.0
