--- a/tests/sqllogictests/scripts/docker-compose-iceberg-tpch.yml
+++ b/tests/sqllogictests/scripts/docker-compose-iceberg-tpch.yml
@@ -20,6 +20,7 @@ version: '3.8'
 services:
   rest:
     image: tabulario/iceberg-rest:0.10.0
+    network_mode: "host"
     environment:
       - AWS_ACCESS_KEY_ID=admin
       - AWS_SECRET_ACCESS_KEY=password
@@ -28,7 +29,7 @@ services:
       - CATALOG_URI=jdbc:sqlite:file:/tmp/iceberg_rest_mode=memory
       - CATALOG_WAREHOUSE=s3://iceberg-tpch
       - CATALOG_IO__IMPL=org.apache.iceberg.aws.s3.S3FileIO
-      - CATALOG_S3_ENDPOINT=http://minio:9000
+      - CATALOG_S3_ENDPOINT=http://127.0.0.1:9000
       - CATALOG_S3_PATH_STYLE_ACCESS=true
     depends_on:
       - minio
@@ -39,6 +40,7 @@ services:
 
   minio:
     image: minio/minio:RELEASE.2024-03-07T00-43-48Z
+    network_mode: "host"
     environment:
       - MINIO_ROOT_USER=admin
       - MINIO_ROOT_PASSWORD=password
@@ -54,9 +56,10 @@ services:
     depends_on:
       - minio
     image: minio/mc:RELEASE.2024-03-07T00-31-49Z
+    network_mode: "host"
     environment:
       - AWS_ACCESS_KEY_ID=admin
       - AWS_SECRET_ACCESS_KEY=password
       - AWS_REGION=us-east-1
     entrypoint: >
-      /bin/sh -c " until (/usr/bin/mc config host add minio http://minio:9000 admin password) do echo '...waiting...' && sleep 1; done; /usr/bin/mc rm -r --force minio/iceberg-tpch; /usr/bin/mc mb minio/iceberg-tpch; /usr/bin/mc policy set public minio/iceberg-tpch; tail -f /dev/null "
+      /bin/sh -c " until (/usr/bin/mc config host add minio http://127.0.0.1:9000 admin password) do echo '...waiting...' && sleep 1; done; /usr/bin/mc rm -r --force minio/iceberg-tpch; /usr/bin/mc mb minio/iceberg-tpch; /usr/bin/mc policy set public minio/iceberg-tpch; tail -f /dev/null "
