--- a/tests/sqllogictests/scripts/docker-compose-iceberg-tpch.yml
+++ b/tests/sqllogictests/scripts/docker-compose-iceberg-tpch.yml
@@ -19,24 +19,26 @@ version: '3.8'
 
 services:
   rest:
-    image: tabulario/iceberg-rest:0.10.0
+    image: tabulario/iceberg-rest:1.6.0
+    container_name: iceberg-rest
     network_mode: "host"
     environment:
       - AWS_ACCESS_KEY_ID=admin
       - AWS_SECRET_ACCESS_KEY=password
       - AWS_REGION=us-east-1
-      - CATALOG_CATOLOG__IMPL=org.apache.iceberg.jdbc.JdbcCatalog
-      - CATALOG_URI=jdbc:sqlite:file:/tmp/iceberg_rest_mode=memory
-      - CATALOG_WAREHOUSE=s3://iceberg-tpch
+      - CATALOG_WAREHOUSE=s3://iceberg-tpch/
       - CATALOG_IO__IMPL=org.apache.iceberg.aws.s3.S3FileIO
-      - CATALOG_S3_ENDPOINT=http://127.0.0.1:9000
-      - CATALOG_S3_PATH_STYLE_ACCESS=true
+      - CATALOG_S3_ENDPOINT=http://127.0.0.1:9900
+      - CATALOG_INCLUDE__CREDENTIALS=true
+      - CATALOG_S3_ACCESS__KEY__ID=admin
+      - CATALOG_S3_SECRET__ACCESS__KEY=password
+      - CATALOG_CLIENT_REGION=us-east-1
     depends_on:
       - minio
     expose:
       - 8181
     ports:
-      - "8181:8181"
+      - 8181:8181
 
   minio:
     image: minio/minio:RELEASE.2024-03-07T00-43-48Z
