--- a/src/common/exception/Cargo.toml
+++ b/src/common/exception/Cargo.toml
@@ -32,6 +32,7 @@ sqlx = "0.8"
 tantivy = { workspace = true }
 thiserror = { workspace = true }
 tonic = { workspace = true }
+libc = { workspace = true}
 
 [package.metadata.cargo-machete]
 ignored = ["geos"]
