bare_blocks_to_parquet
Signed-off-by: coldWater <forsaken628@gmail.com>

--- a/src/query/storages/common/blocks/Cargo.toml
+++ b/src/query/storages/common/blocks/Cargo.toml
@@ -11,6 +11,7 @@ doctest = false
 test = true
 
 [dependencies]
+bytes = { workspace = true }
 databend-common-exception = { workspace = true }
 databend-common-expression = { workspace = true }
 databend-storages-common-table-meta = { workspace = true }
