--- a/src/query/storages/common/blocks/Cargo.toml
+++ b/src/query/storages/common/blocks/Cargo.toml
@@ -15,6 +15,7 @@ bytes = { workspace = true }
 databend-common-exception = { workspace = true }
 databend-common-expression = { workspace = true }
 databend-storages-common-table-meta = { workspace = true }
+opendal = { workspace = true }
 parking_lot = { workspace = true }
 parquet = { workspace = true }
 
