--- a/scripts/ci/deploy/config/databend-query-node-1.toml
+++ b/scripts/ci/deploy/config/databend-query-node-1.toml
@@ -5,8 +5,6 @@
 max_active_sessions = 256
 shutdown_wait_timeout_ms = 5000
 
-max_running_queries = 2
-
 # For flight rpc.
 flight_api_address = "0.0.0.0:9091"
 
@@ -82,7 +80,7 @@ join_spilling_memory_ratio = 60
 [log]
 
 [log.file]
-level = "INFO"
+level = "DEBUG"
 format = "text"
 dir = "./.databend/logs_1"
 prefix_filter = ""
