--- a/src/query/storages/hive/hive/Cargo.toml
+++ b/src/query/storages/hive/hive/Cargo.toml
@@ -15,12 +15,12 @@ async-backtrace = { workspace = true }
 async-recursion = "1.1.1"
 async-trait = { workspace = true }
 chrono = { workspace = true }
-databend-common-arrow = { workspace = true }
 databend-common-base = { workspace = true }
 databend-common-catalog = { workspace = true }
 databend-common-config = { workspace = true }
 databend-common-exception = { workspace = true }
 databend-common-expression = { workspace = true }
+databend-storages-common-pruner = { workspace = true }
 databend-common-functions = { workspace = true }
 databend-common-meta-app = { workspace = true }
 databend-common-meta-store = { workspace = true }
@@ -30,10 +30,12 @@ databend-common-pipeline-sources = { workspace = true }
 databend-common-sql = { workspace = true }
 databend-common-storage = { workspace = true }
 databend-storages-common-cache = { workspace = true }
+databend-common-storages-parquet = { workspace = true }
 databend-storages-common-index = { workspace = true }
 databend-storages-common-table-meta = { workspace = true }
 fastrace = { workspace = true }
 faststr = "0.2"
+parquet = {workspace = true}
 futures = { workspace = true }
 hive_metastore = "0.1.0"
 log = { workspace = true }
