--- a/.github/actions/test_unit/action.yml
+++ b/.github/actions/test_unit/action.yml
@@ -16,7 +16,7 @@ runs:
         RUST_TEST_THREADS: "8"
         RUST_LOG: ERROR
         RUST_MIN_STACK: 104857600
-        RUST_BACKTRACE: 1
+        # RUST_BACKTRACE: 1
 
     - name: Upload failure
       if: failure()
