refactor(query): make delta table support partition prunning (#16621)
* refactor: make delta table support partition prunning

* refactor: make delta table support partition prunning

* refactor: make delta table support partition prunning

* refactor: make delta table support partition prunning

* refactor: make delta table support partition prunning

* enable bt in ut

* improve tests

* improve tests

* fix typo

--- a/src/query/storages/parquet/Cargo.toml
+++ b/src/query/storages/parquet/Cargo.toml
@@ -29,6 +29,7 @@ databend-common-metrics = { workspace = true }
 databend-common-pipeline-core = { workspace = true }
 databend-common-settings = { workspace = true }
 databend-common-storage = { workspace = true }
+databend-storages-common-cache = { workspace = true }
 databend-storages-common-pruner = { workspace = true }
 databend-storages-common-stage = { workspace = true }
 databend-storages-common-table-meta = { workspace = true }
