--- a/src/query/storages/hive/hive/Cargo.toml
+++ b/src/query/storages/hive/hive/Cargo.toml
@@ -15,7 +15,6 @@ async-backtrace = { workspace = true }
 async-recursion = "1.1.1"
 async-trait = { workspace = true }
 chrono = { workspace = true }
-databend-common-arrow = { workspace = true }
 databend-common-base = { workspace = true }
 databend-common-catalog = { workspace = true }
 databend-common-config = { workspace = true }
@@ -29,8 +28,8 @@ databend-common-pipeline-core = { workspace = true }
 databend-common-pipeline-sources = { workspace = true }
 databend-common-sql = { workspace = true }
 databend-common-storage = { workspace = true }
-databend-storages-common-cache = { workspace = true }
-databend-storages-common-index = { workspace = true }
+databend-common-storages-parquet = { workspace = true }
+databend-storages-common-pruner = { workspace = true }
 databend-storages-common-table-meta = { workspace = true }
 fastrace = { workspace = true }
 faststr = "0.2"
@@ -38,6 +37,7 @@ futures = { workspace = true }
 hive_metastore = "0.1.0"
 log = { workspace = true }
 opendal = { workspace = true }
+parquet = { workspace = true }
 recursive = "0.1.1"
 serde = { workspace = true }
 typetag = { workspace = true }
