--- a/src/query/ee_features/virtual_column/Cargo.toml
+++ b/src/query/ee_features/virtual_column/Cargo.toml
@@ -19,6 +19,7 @@ databend-common-base = { workspace = true }
 databend-common-catalog = { workspace = true }
 databend-common-exception = { workspace = true }
 databend-common-meta-app = { workspace = true }
+databend-common-pipeline-core = { workspace = true }
 databend-common-storages-fuse = { workspace = true }
 databend-storages-common-table-meta = { workspace = true }
 
