chore(query): use flight arrow to exchange datas

--- a/src/query/service/Cargo.toml
+++ b/src/query/service/Cargo.toml
@@ -31,7 +31,8 @@ enable_queries_executor = []
 [dependencies]
 arrow-array = { workspace = true }
 arrow-flight = { workspace = true }
-arrow-ipc = { workspace = true }
+arrow-buffer = { workspace = true }
+arrow-ipc = { workspace = true, features = ["lz4"]}
 arrow-schema = { workspace = true }
 arrow-udf-js = { workspace = true }
 arrow-udf-python = { workspace = true, optional = true }
