--- a/src/common/exception/Cargo.toml
+++ b/src/common/exception/Cargo.toml
@@ -16,6 +16,7 @@ databend-common-ast = { workspace = true }
 
 anyhow = { workspace = true }
 arrow-schema = { workspace = true }
+arrow-flight = { workspace = true }
 backtrace = { workspace = true }
 bincode = { workspace = true }
 geos = { workspace = true }
