chore(query): use flight arrow to exchange datas

--- a/src/query/storages/fuse/Cargo.toml
+++ b/src/query/storages/fuse/Cargo.toml
@@ -14,7 +14,7 @@ test = true
 ahash = "0.8.3"
 arrow = { workspace = true }
 arrow-array = { workspace = true }
-arrow-ipc = { workspace = true, features = ["lz4"]}
+arrow-ipc = { workspace = true, features = ["lz4", "zstd"] }
 async-backtrace = { workspace = true }
 async-channel = "1.7.1"
 async-trait = { workspace = true }
