--- a/src/query/service/Cargo.toml
+++ b/src/query/service/Cargo.toml
@@ -32,7 +32,7 @@ enable_queries_executor = []
 arrow-array = { workspace = true }
 arrow-flight = { workspace = true }
 arrow-buffer = { workspace = true }
-arrow-ipc = { workspace = true, features = ["lz4"]}
+arrow-ipc = { workspace = true, features = ["lz4", "zstd"] }
 arrow-schema = { workspace = true }
 arrow-udf-js = { workspace = true }
 arrow-udf-python = { workspace = true, optional = true }
