feat: Bump OpenDAL to 0.50.1
Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -60,6 +60,8 @@ tikv-jemalloc-sys = "0.5.2"
 tokio = { workspace = true }
 unicode-segmentation = "1.10.1"
 uuid = { workspace = true }
+reqwest = { workspace = true }
+reqwest-hickory-resolver = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 procfs = { version = "^0.16" }
