--- a/Cargo.toml
+++ b/Cargo.toml
@@ -253,10 +253,11 @@ jwt-simple = "0.11.0"
 libc = { version = "0.2.158" }
 match-template = "0.0.1"
 mysql_async = { version = "0.34", default-features = false, features = ["native-tls-tls"] }
-object_store_opendal = "0.47"
+object_store_opendal = "0.46"
+opendal_compat = { version = "1" }
 once_cell = "1.15.0"
 openai_api_rust = "0.1"
-opendal = { version = "0.50.0", features = [
+opendal = { version = "0.50.1", features = [
     "layers-fastrace",
     "layers-prometheus-client",
     "layers-async-backtrace",
