--- a/src/meta/app/Cargo.toml
+++ b/src/meta/app/Cargo.toml
@@ -40,6 +40,7 @@ serde_json = { workspace = true }
 sha1 = "0.10.5"
 sha2 = { workspace = true }
 thiserror = { workspace = true }
+reqwest = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
