--- a/src/query/storages/delta/Cargo.toml
+++ b/src/query/storages/delta/Cargo.toml
@@ -26,7 +26,22 @@ fastrace = { workspace = true }
 match-template = "0.0.1"
 object_store_opendal = { workspace = true }
 # enable features to make delta happy.
-opendal = { version = "0.49.2", features = ["services-s3", "services-fs"] }
+opendal = { version = "0.49.2", features = [
+    "services-s3",
+    "services-fs",
+    "services-gcs",
+    "services-cos",
+    "services-obs",
+    "services-oss",
+    "services-azblob",
+    "services-azdls",
+    "services-ipfs",
+    "services-http",
+    "services-moka",
+    "services-webhdfs",
+    "services-huggingface",
+    "services-redis",
+] }
 opendal_compat = { workspace = true, features = ["v0_50_to_v0_49"] }
 parquet = { workspace = true }
 serde = { workspace = true }
