--- a/Cargo.toml
+++ b/Cargo.toml
@@ -417,7 +417,6 @@ color-eyre = { git = "https://github.com/eyre-rs/eyre.git", rev = "e5d92c3" }
 ethnum = { git = "https://github.com/datafuse-extras/ethnum-rs", rev = "4cb05f1" }
 jsonb = { git = "https://github.com/databendlabs/jsonb", rev = "672e423" }
 openai_api_rust = { git = "https://github.com/datafuse-extras/openai-api", rev = "819a0ed" }
-opendal = { git = "https://github.com/apache/opendal", rev = "0ef4fea" }
 opendal_compat = { git = "https://github.com/apache/opendal", rev = "0ef4fea" }
 orc-rust = { git = "https://github.com/datafuse-extras/datafusion-orc", rev = "03372b97" }
 recursive = { git = "https://github.com/datafuse-extras/recursive.git", rev = "6af35a1" }
@@ -426,3 +425,7 @@ tantivy = { git = "https://github.com/datafuse-extras/tantivy", rev = "7502370" 
 tantivy-common = { git = "https://github.com/datafuse-extras/tantivy", rev = "7502370", package = "tantivy-common" }
 tantivy-jieba = { git = "https://github.com/datafuse-extras/tantivy-jieba", rev = "0e300e9" }
 xorfilter-rs = { git = "https://github.com/datafuse-extras/xorfilter", tag = "databend-alpha.4" }
+
+# This patch makes sure opendal_compat also used the same version of opendal instead of git one.
+[patch.'https://github.com/apache/opendal']
+opendal = { version = "0.50.1" }
