--- a/src/binaries/Cargo.toml
+++ b/src/binaries/Cargo.toml
@@ -8,7 +8,8 @@ publish = { workspace = true }
 edition = { workspace = true }
 
 [features]
-default = ["simd", "jemalloc"]
+#default = ["simd", "jemalloc"]
+default = ["simd", "mimalloc"]
 memory-profiling = [
     "databend-query/memory-profiling",
     "databend-common-base/memory-profiling",
@@ -16,6 +17,7 @@ memory-profiling = [
 python-udf = ["databend-query/python-udf"]
 simd = ["databend-query/simd"]
 jemalloc = ["databend-common-base/jemalloc", "databend-query/jemalloc"]
+mimalloc = ["databend-common-base/mimalloc"]
 io-uring = [
     "databend-query/io-uring",
 ]
