Fix hive may return same files
Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/src/common/tracing/Cargo.toml
+++ b/src/common/tracing/Cargo.toml
@@ -28,6 +28,7 @@ logforth = { version = "0.12", features = [
     'rolling_file',
     'opentelemetry',
     'fastrace',
+    "env-filter",
 ] }
 opentelemetry = { workspace = true }
 opentelemetry-otlp = { workspace = true }
