feat: Bump OpenDAL to 0.50.1 (#16661)
* Save work

Signed-off-by: Xuanwo <github@xuanwo.io>

* feat: Bump OpenDAL to 0.50.1

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix cargo.lock

Signed-off-by: Xuanwo <github@xuanwo.io>

* Refactor metrics

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix build

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix header

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix build

Signed-off-by: Xuanwo <github@xuanwo.io>

* Format toml

Signed-off-by: Xuanwo <github@xuanwo.io>

* Update cargo lock

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix services for opendal

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix opendal 0.49

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix opendal compat

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix version mismatch

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix patch

Signed-off-by: Xuanwo <github@xuanwo.io>

* Add ping support in redis mock

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix hang on auto detect

Signed-off-by: Xuanwo <github@xuanwo.io>

* Ignore other errors

Signed-off-by: Xuanwo <github@xuanwo.io>

* Remove unexpected check

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix compat

Signed-off-by: Xuanwo <github@xuanwo.io>

* Format toml

Signed-off-by: Xuanwo <github@xuanwo.io>

* Use main branch of opendal_compat

Signed-off-by: Xuanwo <github@xuanwo.io>

* ignore the dir itself

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix path handling

Signed-off-by: Xuanwo <github@xuanwo.io>

* Try make sure location always end with /

Signed-off-by: Xuanwo <github@xuanwo.io>

* Revert "Try make sure location always end with /"

This reverts commit dc7eea836a9de9bd90f7398eb7d7b9b54e988ff0.

* Fix hive may return same files

Signed-off-by: Xuanwo <github@xuanwo.io>

---------

Signed-off-by: Xuanwo <github@xuanwo.io>
Co-authored-by: Bohu <overred.shuttler@gmail.com>

--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -50,6 +50,8 @@ prometheus-parse = "0.2.3"
 rand = { workspace = true, features = ["serde1"] }
 regex = { workspace = true }
 replace_with = "0.1.7"
+reqwest = { workspace = true }
+reqwest-hickory-resolver = { workspace = true }
 rustix = "0.38.37"
 semver = { workspace = true }
 serde = { workspace = true }
