--- a/Cargo.toml
+++ b/Cargo.toml
@@ -229,7 +229,7 @@ criterion = "0.5"
 ctor = "0.2"
 dashmap = "5.4.0"
 deepsize = { version = "0.2.0" }
-deltalake = "0.18"
+deltalake = "0.20"
 derive-visitor = { version = "0.4.0", features = ["std-types-drive"] }
 derive_more = "0.99.17"
 enumflags2 = { version = "0.7.7", features = ["serde"] }
@@ -256,7 +256,7 @@ mysql_async = { version = "0.34", default-features = false, features = ["native-
 object_store_opendal = "0.46"
 once_cell = "1.15.0"
 openai_api_rust = "0.1"
-opendal = { version = "0.49.0", features = [
+opendal = { version = "0.50.1", features = [
     "layers-fastrace",
     "layers-prometheus-client",
     "layers-async-backtrace",
@@ -275,6 +275,7 @@ opendal = { version = "0.49.0", features = [
     "services-huggingface",
     "services-redis",
 ] }
+opendal_compat = { version = "1" }
 openraft = { git = "https://github.com/drmingdrmer/openraft", tag = "v0.10.0-alpha.6", features = [
     "serde",
     "tracing-log",
@@ -413,10 +414,10 @@ backtrace = { git = "https://github.com/rust-lang/backtrace-rs.git", rev = "7226
     "serialize-serde",
 ] }
 color-eyre = { git = "https://github.com/eyre-rs/eyre.git", rev = "e5d92c3" }
-deltalake = { git = "https://github.com/delta-io/delta-rs", rev = "57795da" }
 ethnum = { git = "https://github.com/datafuse-extras/ethnum-rs", rev = "4cb05f1" }
 jsonb = { git = "https://github.com/databendlabs/jsonb", rev = "ada713c" }
 openai_api_rust = { git = "https://github.com/datafuse-extras/openai-api", rev = "819a0ed" }
+opendal_compat = { git = "https://github.com/apache/opendal", rev = "f6e60f6" }
 orc-rust = { git = "https://github.com/datafuse-extras/datafusion-orc", rev = "03372b97" }
 recursive = { git = "https://github.com/datafuse-extras/recursive.git", rev = "6af35a1" }
 sled = { git = "https://github.com/datafuse-extras/sled", tag = "v0.34.7-datafuse.1" }
@@ -424,3 +425,7 @@ tantivy = { git = "https://github.com/datafuse-extras/tantivy", rev = "7502370" 
 tantivy-common = { git = "https://github.com/datafuse-extras/tantivy", rev = "7502370", package = "tantivy-common" }
 tantivy-jieba = { git = "https://github.com/datafuse-extras/tantivy-jieba", rev = "0e300e9" }
 xorfilter-rs = { git = "https://github.com/datafuse-extras/xorfilter", tag = "databend-alpha.4" }
+
+# This patch makes sure opendal_compat also used the same version of opendal instead of git one.
+[patch.'https://github.com/apache/opendal']
+opendal = { version = "0.50.1" }
