--- a/src/query/functions/Cargo.toml
+++ b/src/query/functions/Cargo.toml
@@ -64,6 +64,7 @@ siphasher = "0.3"
 strength_reduce = "0.2.3"
 stringslice = "0.2.0"
 twox-hash = "1.6.3"
+telnet = "0.2.2"
 
 [dev-dependencies]
 comfy-table = "6"
